# Ketzuktz.github.io

./: .mypy.ini  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: pre-commit.yml  pytest.yml  python-package.yml
docs/: card_types.md  duel flow.md  elemental_reactions.md  piercing dmg.md  七圣召唤实现描述.md  七圣召唤效果描述语言.md  架构设计.md
docs/reference/: Applying Reinforcement Learning and Supervised Learning Techniques to Play Hearthstone.md  Genius-Invokation Environment Base Architecture.md
gicg_sim/: __init__.py  action.py  character.py  die.py  game.py  state.py  userboard.py
gicg_sim/basic/: effect.py
gicg_sim/card/: __init__.py  action.py  base.py  character.py
gicg_sim/data/: die_type.yaml  effect.yaml
gicg_sim/data/cards/: character.yaml
gicg_sim/utils/: card.py  data.py
src/gicg_sim/: __init__.py  action.py  artifact.py  character.py  die.py  effect.py  game.py  state.py  weapon.py
src/gicg_sim/basic/: action_card.py  character.py  cost.py  die.py  effect.py  element.py  enums.py  faction.py  group.py  subtypes.py  weapon.py
src/gicg_sim/basic/event/: base.py  logic.py  operation.py  subevent.py
src/gicg_sim/card/: __init__.py  base.py  character.py
src/gicg_sim/data/: __init__.py  action_card.yaml  character.yaml  effect.yaml  loader.py
src/gicg_sim/decorator/: __init__.py  prototype_loadable.py
src/gicg_sim/game/: action.py  condition.py  config.py  deck.py  enums.py  event.py  game.py  manager.py  operation_helper.py  player_panel.py  state.py  token.py
src/gicg_sim/game/interpreter/: character.py  context.py  event.py  subevent.py  token.py  utils.py
src/gicg_sim/game/state/: __init__.py  base.py  control.py  data.py  mutation.py  side.py
src/gicg_sim/model/: action_card.py  character.py  placement.py  summon.py  weapon.py
src/gicg_sim/model/prototype/: action_card.py  character.py  cost.py  die.py  effect.py  skill.py
src/gicg_sim/types/: character.py  condition.py  cost.py  enums.py  event.py  operation.py  subtypes.py  sysEvent.py  weapon.py
tests/: __main__.py  test_character.py  test_die.py  test_userboard.py
tests/test_basic/: test_enums.py
tests/test_data/: test_action_card.py  test_character.py
tests/test_data/test_character/: game_init.py  test_Diluc.py
tests/test_game/: test_action.py  test_attack.py  test_event.py  test_reroll.py  test_state.py
tools/fandom_spider/: character.py  enums.yml  process.py  requirements.txt
tools/mihoyo_spider/: main.py  test.py
tools/mihoyo_spider/mihoyo/: request.py
tools/mihoyo_spider/mihoyo/wiki/: card.py  smarter.py
tools/mihoyo_spider/output.d/: card_lists.json
tools/mihoyo_spider/output.d/行动牌/: 一掷乾坤.json  一触即发.json  万千的愿望.json  下落斩.json  不动玄石之相.json  交叉火力.json  交给我吧！.json  仙跳墙.json  便携营养袋.json  储之千日，用之一刻.json  元素共鸣：交织之冰.json  元素共鸣：交织之岩.json  元素共鸣：交织之水.json  元素共鸣：交织之火.json  元素共鸣：交织之草.json  元素共鸣：交织之雷.json  元素共鸣：交织之风.json  元素共鸣：坚定之岩.json  元素共鸣：强能之雷.json  冒险憧憬.json  (+189 more)
tools/mihoyo_spider/output_data.d/: dictionary.yml  effects.yml
utils/fandom_spider/: character.py  process.py
utils/mihoyo_spider/: main.py
utils/mihoyo_spider/mihoyo/: request.py
utils/official_obc/: card_parser.py  main.py  mihoyo.py  web.py
utils/official_obc/mihoyo/: channel.py
utils/wiki_spider/: data.py  fetched_data.yml  main.py  web.py
(+401 files in other folders)
